# stm32-workspace

./: CMakeLists.txt  build.sh
.github/workflows/: docker-image-ubuntu.yml  docker-image-win.yml  docker-image.yml
docker/: build.sh  run.sh  toolchain.dockerfile
tools/: download.pl
